[package]
name = "ethereum-types"
version = "0.5.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
homepage = "https://github.com/paritytech/primitives"
description = "Ethereum types"

[dependencies]
crunchy = { version = "0.2.1", default-features = false }
ethbloom = { path = "../ethbloom", version = "0.6", default-features = false }
ethereum-types-serialize = { version = "0.2.2", path = "../serialize", optional = true }
fixed-hash = { version = "0.3", default_features = false }
serde = { version = "1.0", optional = true }
uint = { git = "https://github.com/paritytech/parity-common.git", revision = "8ebc5c85c2ba606e40525853829c5047499cc5fb", default_features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std", "heapsize", "serialize", "fixed-hash/byteorder", "fixed-hash/rustc-hex"]
std = ["uint/std", "fixed-hash/std", "ethbloom/std", "crunchy/std"]
heapsize = ["uint/heapsize", "fixed-hash/heapsize", "ethbloom/heapsize"]
serialize = ["std", "ethereum-types-serialize", "serde", "ethbloom/serialize"]
